# hotpot-qa-setup

./: .gitignore  README.md  pyproject.toml  shell.nix
scripts/: 00-download.sh
src/hotpot_qa/: __init__.py  download.py  main.py  model.py  utils.py
src/hotpot_qa/data/: analysis.py  catalog.py  download.py  processor.py
src/hotpot_qa/utils/: __init__.py  json_stream.py  tokenization.py
src/hotpot_qa/wiki/: __init__.py
src/hotpot_qa/wikipedia/: model.py  search.py  sqlite_backend.py
tests/: test_wikipedia_search.py
