[project]
name = "hotpot-qa-setup"
version = "0.1.0"
description = "Dataset creation tool for long-context HotpotQA evaluation"
readme = "README.md"
authors = [{name = "hotpot-qa-team"}]
requires-python = ">=3.10"
dependencies = [
    "tiktoken>=0.7.0",
    "tqdm>=4.66.0",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "ijson>=3.2.0",
    "nltk>=3.8.0",
    "scikit-learn>=1.4.0",
]

[project.scripts]
hotpot-download = "hotpot_qa.download:main"
hotpot-process = "hotpot_qa.main:main"

[tool.uv]
dev-dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/hotpot_qa"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
